--- a/app/styles/world.css
+++ b/app/styles/world.css
@@ -1,98 +1,249 @@
-html, body {
+html {
   margin: 0;
   padding: 0;
-  background: #1a1f13;
+  background: #f9f9f9;
+}
+body {
+  margin: 0;
+  padding: 0;
+  /*background: linear-gradient(to bottom, #fff 0%, #f3f3f3 350px, #ddd 370px, #f3f3f3 371px, #eee 400px, #ccc 100%);*/
+  background: linear-gradient(to bottom, white 0%, #faf6f6 100%);
+  font-family: 'Avenir', 'Arial'
+}
+body {
+background: rgb(255,255,255);
+background: -moz-linear-gradient(-45deg,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 23%, rgba(246,246,246,1) 25%, rgba(255,255,255,1) 27%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 73%, rgba(246,246,246,1) 75%, rgba(255,255,255,1) 77%, rgba(255,255,255,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(23%,rgba(255,255,255,1)), color-stop(25%,rgba(246,246,246,1)), color-stop(27%,rgba(255,255,255,1)), color-stop(50%,rgba(255,255,255,1)), color-stop(73%,rgba(255,255,255,1)), color-stop(75%,rgba(246,246,246,1)), color-stop(77%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,1) 27%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,1) 77%,rgba(255,255,255,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,1) 27%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,1) 77%,rgba(255,255,255,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,1) 27%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,1) 77%,rgba(255,255,255,1) 100%);
+background: linear-gradient(135deg,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,1) 27%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,1) 77%,rgba(255,255,255,1) 100%);
+background-size: 20px 20px;
 }
 
-#world {
-  width: 1200px;
-  height: 600px;
-  /*border-bottom: 3px solid black;*/
+body > div {
+width: inherit;
+height: inherit;
+background: -moz-linear-gradient(45deg,  rgba(255,255,255,0) 0%, rgba(255,255,255,0) 23%, rgba(246,246,246,1) 25%, rgba(255,255,255,0) 27%, rgba(255,255,255,0) 50%, rgba(255,255,255,0) 73%, rgba(246,246,246,1) 75%, rgba(255,255,255,0) 77%, rgba(255,255,255,0) 100%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(23%,rgba(255,255,255,0)), color-stop(25%,rgba(246,246,246,1)), color-stop(27%,rgba(255,255,255,0)), color-stop(50%,rgba(255,255,255,0)), color-stop(73%,rgba(255,255,255,0)), color-stop(75%,rgba(246,246,246,1)), color-stop(77%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,0)));
+background: -webkit-linear-gradient(45deg,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,0) 27%,rgba(255,255,255,0) 50%,rgba(255,255,255,0) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,0) 77%,rgba(255,255,255,0) 100%);
+background: -o-linear-gradient(45deg,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,0) 27%,rgba(255,255,255,0) 50%,rgba(255,255,255,0) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,0) 77%,rgba(255,255,255,0) 100%);
+background: -ms-linear-gradient(45deg,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,0) 27%,rgba(255,255,255,0) 50%,rgba(255,255,255,0) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,0) 77%,rgba(255,255,255,0) 100%);
+background: linear-gradient(45deg,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 23%,rgba(246,246,246,1) 25%,rgba(255,255,255,0) 27%,rgba(255,255,255,0) 50%,rgba(255,255,255,0) 73%,rgba(246,246,246,1) 75%,rgba(255,255,255,0) 77%,rgba(255,255,255,0) 100%);
+background-size: 20px 20px;
+}
+
+
+.resume {
+  cursor: pointer;
+  width: 700px;
+  height: 800px;
   position: relative;
   margin: 0px auto;
   overflow: hidden;
-  /*background: linear-gradient(to bottom, #7da7be, #878cb1); //dusk*/
-  background: linear-gradient(to bottom, #9be2fe 0%, #67d1fb 70%); //day
-  /*background: linear-gradient(to bottom, #244970, #ae9d4e); //nighttime*/
-  transform: translate3d(0,0,0);
+  background: white;
+  transform: translate3d(0,000px,0);
+  box-shadow: 0 3px 5px rgba(0,0,0,0);
+  transition: transform .6s ease-in-out, box-shadow .6s;
 }
-#background div, #foreground div {
+.resume.on-desk {
+  -webkit-transform: perspective(500px) rotateX(65deg) scale(.3) translate3d(0,700px,0);
+  box-shadow: 0 3px 5px rgba(0,0,0,.2)
+}
+
+.resume .header {
+  margin: 30px 0 5px;
+  text-align: center;
+  font-size: 26px;
+  line-height: 20px;
+  /*text-transform: uppercase;*/
+  font-weight: 600;
+  /*font-family: "brandon", "Avenir", Arial, sans-serif;*/
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.resume .sub-header {
+  text-align: center;
+  font-size: 17px;
+}
+.border-one, .border-two, .border-three {
+  width: 100%;
+  height: 1px;
+}
+.border-one {
+  margin-top: 20px;
+  background: linear-gradient(to right, rgba(228,24,163,0) 15%, rgba(228,24,163,1) 30%, rgba(228,24,163,0) 65%)
+}
+
+.border-two {
+  background: white;
+}
+
+.border-three {
+  background: linear-gradient(to right, rgba(0,1246,239,0) 30%, rgba(0,1246,239,1) 60%, rgba(0,1246,239,0) 246%)
+}
+
+.resume .images {
+  width: 100%;
+  padding: 0px 0px 30px 30px;
+}
+.resume .images .image {
+  width: 300px;
+  height: 200px;
+  margin: 30px 30px 0 0;
+  float: left;
+  box-shadow: 0 0 3px rgba(0,0,0,.2);
+}
+.resume .images .image.shown {
+  visibility: hidden;
+}
+.portfolio-items {
+  position: absolute;
+  width: 1000px;
+  margin-left: calc(50% - 500px);
+  /*border: 1px solid red;*/
+  top: 100px;
+}
+.portfolio-items .images {
+  position: absolute;
+  left: 0;
+  width: 450px;
+}
+.portfolio-items .images .image {
+  position: absolute;
+  left: 0;
+  width: 450px;
+  height: 300px;
+  transition: transform .6s ease-in-out;
+  visibility: hidden;
+}
+.portfolio-items .images .item-one {
+  -webkit-transform: scale(0.3) translate3d(663px,780px,0);
+}
+.portfolio-items .images .item-two {
+  -webkit-transform: scale(0.3) translate3d(1168px,823px,0);
+}
+.portfolio-items .images .item-three {
+  -webkit-transform: scale(0.3) translate3d(653px,1023px,0);
+}
+.portfolio-items .images .item-four {
+  -webkit-transform: scale(0.3) translate3d(1168px,1023px,0);
+}
+.portfolio-items .images .image.selected {
+  -webkit-transform: perspective(0px) rotateX(0deg) scale(1) skew(0deg) translate3d(0,0,0);
+}
+.portfolio-items .images .image.shown {
+  visibility: visible;
+}
+.napster-main-image {
+  background: url(../assets/napster/1.png) ;
+  background-size: cover;
+}
+.recipes-main-image {
+  background: url(../assets/recipes/1.png) ;
+  background-size: cover;
+}
+
+.activetime-main-image {
+  background: url(../assets/activetime/1.png) ;
+  background-size: cover;
+}
+.bball-main-image {
+  background: url(../assets/bball/1.png) ;
+  background-size: cover;
+}
+.ninja-main-image {
+  background: url(../assets/ninja/1.png) ;
+  background-size: cover;
+}
+
+
+.descriptions {
+  width: 500px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.description {
   position: absolute;
   top: 0;
-  left: 0;
-  height: 100%;
-  width: 2000px;
-  background-position: 0 0;
+  opacity: 0;
+  transition: opacity .4s ease-in;
 }
-#world > div {
-  position: absolute;
+.description .title {
+  font-size: 30px;
+  font-weight: 700;
+  opacity: 0;
+}
+.description .sub-title {
+  font-size: 20px;
+  font-weight: 500;
+  opacity: 0;
+}
+.description .description-body {
+  margin-top: 20px;
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0;
+}
+.description.shown .title, .description.shown .sub-title, .description.shown .description-body {
+  opacity: 1;
   transform: translate3d(0,0,0);
-  height: 100%;
-  width: 100%;
 }
-#world div {
-  position: absolute;
+
+.description.selected {
+  opacity: 1;
+}
+
+.napster-description .title {
+  transform: translate3d(-10px, -12px, 0);
+  transition: transform .8s ease-in, opacity .8s ease-in;
+}
+.napster-description .sub-title {
+  transform: translate3d(15px, -4px, 0);
+  transition: transform .8s ease-in, opacity .8s ease-in;
+}
+.napster-description .description-body {
+  transform: translate3d(5px, 4px, 0);
+  transition: transform .5s ease-in, opacity 1.5s ease-in;
+  -webkit-transition-delay: .5s; /* Safari */
+  transition-delay: .5s;
+}
+.recipes-description .title {
+  transform: translate3d(6px, -9px, 0);
+  transition: transform .8s ease-in, opacity .8s ease-in;
+}
+.recipes-description .sub-title {
+  transform: translate3d(11px, 4px, 0);
+  transition: transform .8s ease-in, opacity .8s ease-in;
+}
+.recipes-description .description-body {
+  transform: translate3d(-1px, 5px, 0);
+  transition: transform .5s ease-in, opacity 1.5s ease-in;
+  -webkit-transition-delay: .5s; /* Safari */
+  transition-delay: .5s;
 }
 
 
-.ledge {
-  background: #777;
+.description.napster-description .line1 {
+  width: 200px;
+  height: 0px;
+  border-top: 4px solid black;
+  -webkit-transform: translate3d(500px, 0, 0) scale(.4,1);
+  opacity: 0;
+  transition: transform .6s ease-in, opacity .6s ease-in;
 }
-.solid.ledge {
-  background: #333;
+.description.recipes-description .line1 {
+  width: 400px;
+  height: 0px;
+  margin-top: 10px;
+  border-top: 2px solid black;
+  -webkit-transform: translate3d(0px, 30px, 0) scale(.8,1);
+  opacity: 0;
+  transition: transform .8s ease-in, opacity .8s ease-in;
 }
-
-.blind {
-  background: green;
-}
-
-.bucket, .action-item {
-  background: red;
-}
-.bucket.knocked-over {
-  background: green;
-}
-.washed-item {
-  background: brown;
-}
-
-.ledge, .blind {
-  display: none;
-}
-
-.current {
-  display: block;
-}
-
-#world.devblocks #landscape {
-  background: #555;
-}
-#world.devblocks #landscape .ledge, #world.devblocks #landscape .blind {
-  display: block;
-}
-
-.sticky-right {
-  border-right: 2px solid green
-}
-.sticky-left {
-  border-left: 2px solid green
-}
-.sticky-bottom {
-  border-bottom: 2px solid green
-}
-
-#background .fire {
-  animation: fire .6s steps(8) infinite;
-}
-
-@keyframes fire {
-  100% { background-position: -1600px; }
-}
-
-#background .drawbridge.lower {
-  animation: drawbridgeLower 2s steps(12) forwards;
-}
-
-@keyframes drawbridgeLower {
-  100% { background-position: -5208px; }
+.description.shown .line1 {
+  -webkit-transform: translate3d(0, 0, 0) scale(1,1);
+  opacity: 1;
 }
