--- a/app/styles/hero.css
+++ b/app/styles/hero.css
@@ -1,150 +1,84 @@
-.hero {
-  height: 36px;
-  width: 21px;
-  position: absolute;
-  transform: translate3d(30px,130px,0);
-  background-color: transparent;
-  background-image: url("assets/ninja/stand-left.png");
-  z-index: 1;
+@font-face {
+    font-family: brandon;
+    src: url(assets/fonts/Brandon_blk.otf);
+    font-weight: 600;
 }
-.hero.stand-left {
-  background-image: url("assets/ninja/stand-left.png")
+@font-face {
+    font-family: brandon;
+    src: url(assets/fonts/Brandon_bld.otf);
+    font-weight: 500;
 }
-.hero.stand-right {
-  background-image: url("assets/ninja/stand-right.png")
+@font-face {
+    font-family: brandon;
+    src: url(assets/fonts/Brandon_med.otf);
+    font-weight: 400;
 }
-.hero.walk-left {
-  background-image: url("assets/ninja/walk-left.png");
-  animation: walk .4s steps(8) infinite;
+@font-face {
+    font-family: brandon;
+    src: url(assets/fonts/Brandon_reg.otf);
+    font-weight: 300;
 }
-.hero.walk-right {
-  background-image: url("assets/ninja/walk-right.png");
-  animation: walk .4s steps(8) infinite;
+@font-face {
+    font-family: brandon;
+    src: url(assets/fonts/Brandon_light.otf);
+    font-weight: 200;
 }
-.hero.run-right {
-  background-image: url("assets/ninja/run-right.png");
-  animation: run .5s steps(16) infinite;
-}
-.hero.run-left {
-  background-image: url("assets/ninja/run-left.png");
-  animation: run .5s steps(16) infinite;
-}
-.hero.jump-right {
-  background-image: url("assets/ninja/jump-right.png")
-}
-.hero.fall-right {
-  background-image: url("assets/ninja/fall-right.png")
-}
-.hero.hang-right {
-  background-image: url("assets/ninja/hang-right.png")
-}
-.hero.jump-left {
-  background-image: url("assets/ninja/jump-left.png")
-}
-.hero.fall-left {
-  background-image: url("assets/ninja/fall-left.png")
-}
-.hero.hang-left {
-  background-image: url("assets/ninja/hang-left.png")
-}
-.hero.climb-left {
-  background-image: url("assets/ninja/climb-left.png")
-}
-.hero.climb-right {
-  background-image: url("assets/ninja/climb-right.png")
-}
-.hero.climb-up-left {
-  background-image: url("assets/ninja/climb-up-left.png");
-  animation: climb .7s steps(5) infinite;
-}
-.hero.climb-up-right {
-  background-image: url("assets/ninja/climb-up-right.png");
-  animation: climb .7s steps(5) infinite;
-}
-.hero.swing-left {
-  background-image: url("assets/ninja/swing-left.png");
-  animation: swing .9s steps(6) infinite;
-}
-.hero.swing-right {
-  background-image: url("assets/ninja/swing-right.png");
-  animation: swing .9s steps(6) infinite;
-}
-.hero.hide {
-  background-image: url("assets/ninja/hide.png");
-  background-repeat: no-repeat;
-  animation: hide .3s steps(5) forwards;
-}
-.hero.reveal {
-  background-image: url("assets/ninja/reveal.png");
-  background-repeat: no-repeat;
-  animation: reveal .3s steps(4) forwards;
+@font-face {
+    font-family: brandon;
+    src: url(assets/fonts/Brandon_thin.otf);
+    font-weight: 100;
 }
 
-@keyframes walk {
-  100% { background-position: -168px; }
+@font-face {
+    font-family: avenir;
+    src: url(assets/fonts/AvenirNext-Heavy.ttf);
+    font-weight: 800;
 }
-@keyframes run {
-  100% { background-position: -336px; }
+@font-face {
+    font-family: avenir;
+    src: url(assets/fonts/AvenirNext-Bold.ttf);
+    font-weight: 700;
 }
-@keyframes climb {
-  100% { background-position: -105px; }
-}
-@keyframes swing {
-  100% { background-position: -126px; }
-}
-@keyframes hide {
-  from { background-position: 0; }
-  to { background-position: -105px; }
-}
-@keyframes reveal {
-  from { background-position: 0; }
-  to { background-position: -84px; }
+@font-face {
+    font-family: avenir;
+    src: url(assets/fonts/AvenirNext-DemiBold.ttf);
+    font-weight: 600;
 }
 
-.baddie {
-  height: 36px;
-  width: 21px;
-  background: url("assets/guard/stand-left.png");
-  position: absolute;
-  transform: translate3d(0,0,0);
+@font-face {
+    font-family: avenir;
+    src: url(assets/fonts/AvenirNext-Medium.ttf);
+    font-weight: 500;
 }
-.baddie.stand-left {
-  background-image: url("assets/guard/stand-left.png")
-}
-.baddie.stand-right {
-  background-image: url("assets/guard/stand-right.png")
-}
-.baddie.walk-left {
-  background-image: url("assets/guard/walk-left.png");
-  animation: walk7 .5s steps(7) infinite;
-}
-.baddie.walk-right {
-  background-image: url("assets/guard/walk-right.png");
-  animation: walk7 .5s steps(7) infinite;
-}
-.baddie.run-right {
-  background-image: url("assets/guard/run-right.png");
-  animation: run .6s steps(16) infinite;
-}
-.baddie.run-left {
-  background-image: url("assets/guard/run-left.png");
-  animation: run .6s steps(16) infinite;
-}
-.baddie.sleep {
-  background-image: url("assets/guard/sleeping.png");
+@font-face {
+    font-family: avenir;
+    src: url(assets/fonts/AvenirNext-Regular.ttf);
+    font-weight: 400;
 }
 
-@keyframes walk7 {
-  100% { background-position: -147px; }
-}
 
-.sleep-zs {
-  width: 24px;
-  height: 34px;
-  background-image: url("assets/global/3Zs.png");
-  animation: zs 3s steps(27) infinite;
+@font-face {
+    font-family: titleFont;
+    src: url('assets/fonts/Sofia-Regular.otf');
+    font-weight: 100;
 }
-
-@keyframes zs {
-  100% { background-position: -648px; }
+@font-face {
+    font-family: titleFont;
+    src: url('assets/fonts/black_jack.ttf');
+    font-weight: 200; //recipe headers
+}
+@font-face {
+    font-family: titleFont;
+    src: url('assets/fonts/bombshell.ttf');
+    font-weight: 300; // main header
+}
+@font-face {
+    font-family: titleFont;
+    src: url('assets/fonts/RockSalt.ttf');
+    font-weight: 400; // group names
+}
+@font-face {
+    font-family: titleFont;
+    src: url('assets/fonts/JandaAppleCobblerSolid.ttf');
+    font-weight: 500;
 }
